--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  body: MyText
-  microposts_id: 
+  body: MyString
   user_id: 
+  micropost_id: 
 
 two:
-  body: MyText
-  microposts_id: 
+  body: MyString
   user_id: 
+  micropost_id: 
